--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,7 +3,7 @@
 body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 18px;
-  color: #DDDDDD;
+  color: #EEEEEE;
   position: relative;
   background: #000;
   display: flex;
